Fixed operator not showing in group

--- a/src/assets/src/edittrigger.scss
+++ b/src/assets/src/edittrigger.scss
@@ -15,6 +15,9 @@
       &.inactive {
          opacity: 0.7;
       }
+      .condition:nth-child(n+2) .operator {
+         display: block;
+      }
    }
    .icon:before {
       margin-top: -4px;
